--- a/app/src/main/res/layout/add_image_item.xml
+++ b/app/src/main/res/layout/add_image_item.xml
@@ -3,22 +3,44 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:id="@+id/rlIncident"
+
     android:layout_height="wrap_content">
+    <FrameLayout
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/ivAddImages"
-        android:layout_width="@dimen/add_image_width"
-        android:layout_height="@dimen/add_image_height"
-        android:src="@drawable/add_more"
-        app:riv_mutate_background="true"
-        android:layout_centerInParent="true"
-        android:scaleType="centerCrop"
-        app:riv_corner_radius="10dip"
-        app:riv_border_color="#404040"
-        app:riv_oval="false"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingBottom="-50dp" >
+            <com.makeramen.roundedimageview.RoundedImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/ivAddImages"
+                android:layout_width="@dimen/add_image_width"
+                android:layout_height="@dimen/add_image_height"
+                android:src="@drawable/add_more"
+                app:riv_mutate_background="true"
+                android:layout_centerInParent="true"
+                android:scaleType="centerCrop"
+                app:riv_corner_radius="10dip"
+                app:riv_border_color="#404040"
+                app:riv_oval="false"
 
-        />
-
+                />
+        </LinearLayout>
+        <ImageView
+            android:visibility="invisible"
+            android:id="@+id/ivDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:clickable="true"
+            android:src="@drawable/remove_img_icon" />
+    </FrameLayout>
 
 </RelativeLayout>
