--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -131,7 +131,7 @@
             android:layout_margin="@dimen/button_margin"
             android:layout_height="@dimen/button_height"
             android:fitsSystemWindows="true"
-            android:text="@string/save"
+            android:text="@string/done"
             android:layout_alignParentBottom="true"
             android:textAllCaps="false"
             android:textColor="@color/white"
