--- a/app/src/main/res/layout/fragment_incident_description.xml
+++ b/app/src/main/res/layout/fragment_incident_description.xml
@@ -28,11 +28,34 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
             app:tabGravity="center"
+            android:visibility="gone"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             app:tabBackground="@drawable/tab_selector"
             app:tabIndicatorHeight="0dp"
             />
+
+        <RelativeLayout
+            android:id="@+id/rlImageScroll"
+            android:padding="20dp"
+            android:layout_marginBottom="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@drawable/up_arrow"
+                android:id="@+id/ivLeft"
+                android:layout_alignParentLeft="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:src="@drawable/up_arrow"
+                android:id="@+id/ivRight"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
