--- a/app/src/main/res/layout/fragment_incident_description.xml
+++ b/app/src/main/res/layout/fragment_incident_description.xml
@@ -42,19 +42,29 @@
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <ImageView
-                android:src="@drawable/up_arrow"
+            <RelativeLayout
                 android:id="@+id/ivLeft"
                 android:layout_alignParentLeft="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="50dp"
+                android:layout_height="50dp">
             <ImageView
-                android:src="@drawable/up_arrow"
+                android:layout_centerInParent="true"
+                android:src="@drawable/left_arrow"
+                android:layout_width="40dp"
+
+                android:layout_height="40dp" />
+            </RelativeLayout>
+            <RelativeLayout
                 android:id="@+id/ivRight"
                 android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="50dp"
+                android:layout_height="50dp">
+            <ImageView
+                android:layout_centerInParent="true"
+                android:src="@drawable/right_arrow_1"
+                android:layout_width="40dp"
+                android:layout_height="40dp" />
+            </RelativeLayout>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
